# Socks5-Client

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  utils.hpp
src/kqueue/: Actions.hpp  KQueue.cpp  KQueue.hpp
src/socket/: ClientSocket.cpp  ClientSocket.hpp  SocketActions.cpp  SocketActions.hpp
src/socks/: SocksActions.cpp  SocksActions.hpp  SocksClient.cpp  SocksClient.hpp
